--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1605,Y=150)
-MultipleInstancePositions=(X=-2074,Y=232)
+MultipleInstancePositions=(X=315,Y=143)
 MultipleInstancePositions=(X=-1190,Y=120)
 MultipleInstancePositions=(X=-1549,Y=361)
 MultipleInstancePositions=(X=-1229,Y=498)
@@ -781,6 +781,50 @@ WalletComponent_C.Sockets=True
 WalletComponent_C.Events=True
 RewardComponent_C.Sockets=True
 RewardComponent_C.Events=True
+Zombie_C.TransformCommon=True
+Zombie_C.Animation=True
+Zombie_C.Mesh=True
+Zombie_C.Tick=True
+Zombie_C.Default=True
+Zombie_C.ComponentTick=True
+Zombie_C.Physics=True
+Zombie_C.Clothing=True
+Zombie_C.ClothingSimulation=True
+Zombie_C.Collision=True
+Zombie_C.Lighting=True
+Zombie_C.Rendering=True
+Zombie_C.Tags=True
+Zombie_C.ComponentReplication=True
+Zombie_C.Activation=True
+Zombie_C.Variable=True
+Zombie_C.Cooking=True
+Zombie_C.Character Movement: Jumping / Falling=True
+Zombie_C.Character Movement (General Settings)=True
+Zombie_C.Character Movement: Walking=True
+Zombie_C.Character Movement: Swimming=True
+Zombie_C.Character Movement: Flying=True
+Zombie_C.Character Movement: Custom Movement=True
+Zombie_C.Character Movement (Rotation Settings)=True
+Zombie_C.Character Movement (Networking)=True
+Zombie_C.Character Movement: Physics Interaction=True
+Zombie_C.Character Movement=True
+Zombie_C.Character Movement: Avoidance=True
+Zombie_C.Character Movement: NavMesh Movement=True
+Zombie_C.RootMotion=True
+Zombie_C.NavMovement=True
+Zombie_C.Velocity=True
+Zombie_C.PlanarMovement=True
+Zombie_C.MovementComponent=True
+Zombie_C.Shape=True
+Zombie_C.Navigation=True
+Zombie_C.Character=True
+Zombie_C.Camera=True
+Zombie_C.Pawn=True
+Zombie_C.Replication=True
+Zombie_C.Input=True
+Zombie_C.Actor=True
+WidgetComponent.HLOD=True
+WidgetComponent.Mobile=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -814,23 +858,24 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyMonsters/MasterMonster
-MRUItem2=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem3=/Game/MyGame/MyGameComponents/Economy/RewardComponent
-MRUItem4=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem0=/Game/MyMonsters/MonsterHealth
+MRUItem1=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem2=/Game/MyGame/MyGameComponents/Economy/RewardComponent
+MRUItem3=/Game/MyMonsters/Zombie/Zombie
+MRUItem4=/Game/MyWorlds/DefaultWorld
 MRUItem5=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem6=/Game/MyWorlds/DefaultWorld
-MRUItem7=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem8=/Game/MyMenu/MM_Player/MM_Player
-MRUItem9=/Game/MyMenu/MM_Level/MM_Level
-MRUItem10=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem11=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem12=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem13=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem14=/Game/MyMonsters/MonsterHealth
-MRUItem15=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem16=/Game/MyGame/MyPlayer/HEALTH
+MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem7=/Game/MyMonsters/MasterMonster
+MRUItem8=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem9=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem10=/Game/MyMenu/MM_Player/MM_Player
+MRUItem11=/Game/MyMenu/MM_Level/MM_Level
+MRUItem12=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem13=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem14=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem15=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem16=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem17=/Game/MyGame/MyPlayer/HEALTH
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -848,11 +893,12 @@ MRUItem16=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameComponents/Economy/WalletComponent.WalletComponent=1
 /Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent=1
 /Game/MyGame/MyGameComponents/Economy/RewardComponent.RewardComponent=1
+/Game/MyMonsters/Zombie/Zombie.Zombie=1
 
 [RootWindow]
-ScreenPosition=X=-1372.000 Y=144.000
+ScreenPosition=X=548.000 Y=144.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -868,7 +914,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=G:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
+UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
@@ -1602,6 +1648,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.LeftMouseAction,InputSettings.Bindings.ActionMappings.RightMouseAction,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.LeftMouseAction,InputSettings.Bindings.ActionMappings.RightMouseAction,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 OnlineSubsystemConfiguratorBPLibrarySettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.LeftMouseAction,InputSettings.Bindings.ActionMappings.RightMouseAction,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
+WidgetComponent=WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Rendering.TextureStreaming,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
