--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -847,7 +847,7 @@ REINST_MasterMonster_C_1409.Input=True
 REINST_MasterMonster_C_1409.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
 OpenAssetsAtExit=/Game/MyGame/MyGameComponents/Economy/WalletComponent.WalletComponent
@@ -868,7 +868,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyMonsters
+ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyPlayer
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -940,7 +940,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
+UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyMenu/MM_Level
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
