--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -849,6 +849,10 @@ REINST_MasterMonster_C_1409.Actor=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
+OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
+OpenAssetsAtExit=/Game/MyMonsters/Zombie/Zombie.Zombie
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -878,10 +882,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMonsters/MasterMonster
-MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem0=/Game/MyMonsters/Zombie/Zombie
+MRUItem1=/Game/MyMonsters/MasterMonster
 MRUItem2=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem3=/Game/MyMonsters/Zombie/Zombie
+MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem4=/Game/MyGame/MyPlayer/HealthWidget
 MRUItem5=/Game/MyWorlds/DefaultWorld
 MRUItem6=/Game/MyMenu/MM_Level/MM_Level
