--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -413,7 +413,7 @@ ProgressBar.Clipping=True
 ProgressBar.Navigation=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
-EdGraph.Outputs=True
+EdGraph.Outputs=False
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
@@ -845,6 +845,69 @@ REINST_MasterMonster_C_1409.Rendering=True
 REINST_MasterMonster_C_1409.Replication=True
 REINST_MasterMonster_C_1409.Input=True
 REINST_MasterMonster_C_1409.Actor=True
+REINST_MyPlayer_C_229.None=True
+REINST_MyPlayer_C_229.Tick=True
+REINST_MyPlayer_C_229.Character=True
+REINST_MyPlayer_C_229.Camera=True
+REINST_MyPlayer_C_229.Pawn=True
+REINST_MyPlayer_C_229.Rendering=True
+REINST_MyPlayer_C_229.Replication=True
+REINST_MyPlayer_C_229.Input=True
+REINST_MyPlayer_C_229.Actor=True
+REINST_MasterMonster_C_788.TransformCommon=True
+REINST_MasterMonster_C_788.Animation=True
+REINST_MasterMonster_C_788.Mesh=True
+REINST_MasterMonster_C_788.Clothing=True
+REINST_MasterMonster_C_788.Physics=True
+REINST_MasterMonster_C_788.Collision=True
+REINST_MasterMonster_C_788.ClothingSimulation=True
+REINST_MasterMonster_C_788.Lighting=True
+REINST_MasterMonster_C_788.Rendering=True
+REINST_MasterMonster_C_788.Tags=True
+REINST_MasterMonster_C_788.Activation=True
+REINST_MasterMonster_C_788.Cooking=True
+REINST_MasterMonster_C_788.Character Movement: Jumping / Falling=True
+REINST_MasterMonster_C_788.Character Movement (General Settings)=True
+REINST_MasterMonster_C_788.Character Movement: Walking=True
+REINST_MasterMonster_C_788.Character Movement: Swimming=True
+REINST_MasterMonster_C_788.Character Movement: Flying=True
+REINST_MasterMonster_C_788.Character Movement: Custom Movement=True
+REINST_MasterMonster_C_788.Character Movement (Rotation Settings)=True
+REINST_MasterMonster_C_788.Character Movement: Physics Interaction=True
+REINST_MasterMonster_C_788.Character Movement (Networking)=True
+REINST_MasterMonster_C_788.Character Movement=True
+REINST_MasterMonster_C_788.Character Movement: Avoidance=True
+REINST_MasterMonster_C_788.Character Movement: NavMesh Movement=True
+REINST_MasterMonster_C_788.RootMotion=True
+REINST_MasterMonster_C_788.NavMovement=True
+REINST_MasterMonster_C_788.Velocity=True
+REINST_MasterMonster_C_788.PlanarMovement=True
+REINST_MasterMonster_C_788.MovementComponent=True
+REINST_MasterMonster_C_788.Shape=True
+REINST_MasterMonster_C_788.Navigation=True
+REINST_MasterMonster_C_788.Character=True
+REINST_MasterMonster_C_788.Camera=True
+REINST_MasterMonster_C_788.Pawn=True
+REINST_MasterMonster_C_788.Input=True
+REINST_MasterMonster_C_788.Actor=True
+REINST_MyPlayer_C_518.None=True
+REINST_MyPlayer_C_518.Tick=True
+REINST_MyPlayer_C_518.Character=True
+REINST_MyPlayer_C_518.Camera=True
+REINST_MyPlayer_C_518.Pawn=True
+REINST_MyPlayer_C_518.Rendering=True
+REINST_MyPlayer_C_518.Replication=True
+REINST_MyPlayer_C_518.Input=True
+REINST_MyPlayer_C_518.Actor=True
+REINST_MyPlayer_C_877.None=True
+REINST_MyPlayer_C_877.Tick=True
+REINST_MyPlayer_C_877.Character=True
+REINST_MyPlayer_C_877.Camera=True
+REINST_MyPlayer_C_877.Pawn=True
+REINST_MyPlayer_C_877.Rendering=True
+REINST_MyPlayer_C_877.Replication=True
+REINST_MyPlayer_C_877.Input=True
+REINST_MyPlayer_C_877.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -853,6 +916,8 @@ OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
 OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
 OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
 OpenAssetsAtExit=/Game/MyMonsters/Zombie/Zombie.Zombie
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthWidget.HealthWidget
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -879,19 +944,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMonsters/Zombie/Zombie
-MRUItem1=/Game/MyMonsters/MasterMonster
-MRUItem2=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem4=/Game/MyGame/MyPlayer/HealthWidget
-MRUItem5=/Game/MyWorlds/DefaultWorld
-MRUItem6=/Game/MyMenu/MM_Level/MM_Level
-MRUItem7=/Game/MyMonsters/MonsterHealth
-MRUItem8=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem9=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyGame/MyPlayer/HealthWidget
+MRUItem2=/Game/MyMenu/MM_Level/MM_Level
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem4=/Game/MyMonsters/Zombie/Zombie
+MRUItem5=/Game/MyMonsters/MasterMonster
+MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem7=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem8=/Game/MyMonsters/MonsterHealth
+MRUItem9=/Game/MyGame/MyPlayer/PlayerHealth
 MRUItem10=/Game/MyGame/MyGameComponents/Economy/WalletComponent
 MRUItem11=/Game/MyGame/MyGameComponents/Economy/RewardComponent
 MRUItem12=/Game/MyGame/MyGameComponents/Economy/BankComponent
@@ -1713,12 +1778,12 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
