--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -908,16 +908,180 @@ REINST_MyPlayer_C_877.Rendering=True
 REINST_MyPlayer_C_877.Replication=True
 REINST_MyPlayer_C_877.Input=True
 REINST_MyPlayer_C_877.Actor=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTDecorator_BlueprintBase_New_C.FlowControl=True
+BTDecorator_BlueprintBase_New_C.Description=True
+BTDecorator_BlueprintBase_New_C.Condition=True
+FindPlayer_C.FlowControl=True
+FindPlayer_C.Description=True
+FindPlayer_C.Condition=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTComposite_SimpleParallel.Parallel=True
+BTComposite_SimpleParallel.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTTask_MoveDirectlyToward.Node=True
+BTTask_MoveDirectlyToward.Blackboard=True
+BTTask_MoveDirectlyToward.Task=True
+BTTask_MoveDirectlyToward.Description=True
+REINST_MyPlayer_C_120.None=True
+REINST_MyPlayer_C_120.Tick=True
+REINST_MyPlayer_C_120.Character=True
+REINST_MyPlayer_C_120.Camera=True
+REINST_MyPlayer_C_120.Pawn=True
+REINST_MyPlayer_C_120.Rendering=True
+REINST_MyPlayer_C_120.Replication=True
+REINST_MyPlayer_C_120.Input=True
+REINST_MyPlayer_C_120.Actor=True
+REINST_MyPlayer_C_348.None=True
+REINST_MyPlayer_C_348.Tick=True
+REINST_MyPlayer_C_348.Character=True
+REINST_MyPlayer_C_348.Camera=True
+REINST_MyPlayer_C_348.Pawn=True
+REINST_MyPlayer_C_348.Rendering=True
+REINST_MyPlayer_C_348.Replication=True
+REINST_MyPlayer_C_348.Input=True
+REINST_MyPlayer_C_348.Actor=True
+REINST_MyPlayer_C_583.None=True
+REINST_MyPlayer_C_583.Tick=True
+REINST_MyPlayer_C_583.Character=True
+REINST_MyPlayer_C_583.Camera=True
+REINST_MyPlayer_C_583.Pawn=True
+REINST_MyPlayer_C_583.Rendering=True
+REINST_MyPlayer_C_583.Replication=True
+REINST_MyPlayer_C_583.Input=True
+REINST_MyPlayer_C_583.Actor=True
+REINST_MyPlayer_C_777.None=True
+REINST_MyPlayer_C_777.Tick=True
+REINST_MyPlayer_C_777.Character=True
+REINST_MyPlayer_C_777.Camera=True
+REINST_MyPlayer_C_777.Pawn=True
+REINST_MyPlayer_C_777.Rendering=True
+REINST_MyPlayer_C_777.Replication=True
+REINST_MyPlayer_C_777.Input=True
+REINST_MyPlayer_C_777.Actor=True
+REINST_Zombie_C_882.TransformCommon=True
+REINST_Zombie_C_882.Animation=True
+REINST_Zombie_C_882.Mesh=True
+REINST_Zombie_C_882.Clothing=True
+REINST_Zombie_C_882.Physics=True
+REINST_Zombie_C_882.Collision=True
+REINST_Zombie_C_882.ClothingSimulation=True
+REINST_Zombie_C_882.Lighting=True
+REINST_Zombie_C_882.Rendering=True
+REINST_Zombie_C_882.Tags=True
+REINST_Zombie_C_882.Activation=True
+REINST_Zombie_C_882.Cooking=True
+REINST_Zombie_C_882.Character Movement: Jumping / Falling=True
+REINST_Zombie_C_882.Character Movement (General Settings)=True
+REINST_Zombie_C_882.Character Movement: Walking=True
+REINST_Zombie_C_882.Character Movement: Swimming=True
+REINST_Zombie_C_882.Character Movement: Flying=True
+REINST_Zombie_C_882.Character Movement: Custom Movement=True
+REINST_Zombie_C_882.Character Movement (Rotation Settings)=True
+REINST_Zombie_C_882.Character Movement: Physics Interaction=True
+REINST_Zombie_C_882.Character Movement (Networking)=True
+REINST_Zombie_C_882.Character Movement=True
+REINST_Zombie_C_882.Character Movement: Avoidance=True
+REINST_Zombie_C_882.Character Movement: NavMesh Movement=True
+REINST_Zombie_C_882.RootMotion=True
+REINST_Zombie_C_882.NavMovement=True
+REINST_Zombie_C_882.Velocity=True
+REINST_Zombie_C_882.PlanarMovement=True
+REINST_Zombie_C_882.MovementComponent=True
+REINST_Zombie_C_882.Shape=True
+REINST_Zombie_C_882.Navigation=True
+REINST_Zombie_C_882.Character=True
+REINST_Zombie_C_882.Camera=True
+REINST_Zombie_C_882.Pawn=True
+REINST_Zombie_C_882.Input=True
+REINST_Zombie_C_882.Actor=True
+Skeleton_C.Default=True
+Skeleton_C.Tick=True
+Skeleton_C.Character=True
+Skeleton_C.Camera=True
+Skeleton_C.Pawn=True
+Skeleton_C.Rendering=True
+Skeleton_C.Replication=True
+Skeleton_C.Input=True
+Skeleton_C.Actor=True
+Skeleton_C.TransformCommon=True
+Skeleton_C.Animation=True
+Skeleton_C.Mesh=True
+Skeleton_C.Clothing=True
+Skeleton_C.Physics=True
+Skeleton_C.Collision=True
+Skeleton_C.ClothingSimulation=True
+Skeleton_C.Lighting=True
+Skeleton_C.Tags=True
+Skeleton_C.Activation=True
+Skeleton_C.Cooking=True
+Skeleton_C.Character Movement: Jumping / Falling=True
+Skeleton_C.Character Movement (General Settings)=True
+Skeleton_C.Character Movement: Walking=True
+Skeleton_C.Character Movement: Swimming=True
+Skeleton_C.Character Movement: Flying=True
+Skeleton_C.Character Movement: Custom Movement=True
+Skeleton_C.Character Movement (Rotation Settings)=True
+Skeleton_C.Character Movement: Physics Interaction=True
+Skeleton_C.Character Movement (Networking)=True
+Skeleton_C.Character Movement=True
+Skeleton_C.Character Movement: Avoidance=True
+Skeleton_C.Character Movement: NavMesh Movement=True
+Skeleton_C.RootMotion=True
+Skeleton_C.NavMovement=True
+Skeleton_C.Velocity=True
+Skeleton_C.PlanarMovement=True
+Skeleton_C.MovementComponent=True
+Skeleton_C.Shape=True
+Skeleton_C.Navigation=True
+REINST_Skeleton_C_900.TransformCommon=True
+REINST_Skeleton_C_900.Animation=True
+REINST_Skeleton_C_900.Mesh=True
+REINST_Skeleton_C_900.Clothing=True
+REINST_Skeleton_C_900.Physics=True
+REINST_Skeleton_C_900.Collision=True
+REINST_Skeleton_C_900.ClothingSimulation=True
+REINST_Skeleton_C_900.Lighting=True
+REINST_Skeleton_C_900.Rendering=True
+REINST_Skeleton_C_900.Tags=True
+REINST_Skeleton_C_900.Activation=True
+REINST_Skeleton_C_900.Cooking=True
+REINST_Skeleton_C_900.Character Movement: Jumping / Falling=True
+REINST_Skeleton_C_900.Character Movement (General Settings)=True
+REINST_Skeleton_C_900.Character Movement: Walking=True
+REINST_Skeleton_C_900.Character Movement: Swimming=True
+REINST_Skeleton_C_900.Character Movement: Flying=True
+REINST_Skeleton_C_900.Character Movement: Custom Movement=True
+REINST_Skeleton_C_900.Character Movement (Rotation Settings)=True
+REINST_Skeleton_C_900.Character Movement: Physics Interaction=True
+REINST_Skeleton_C_900.Character Movement (Networking)=True
+REINST_Skeleton_C_900.Character Movement=True
+REINST_Skeleton_C_900.Character Movement: Avoidance=True
+REINST_Skeleton_C_900.Character Movement: NavMesh Movement=True
+REINST_Skeleton_C_900.RootMotion=True
+REINST_Skeleton_C_900.NavMovement=True
+REINST_Skeleton_C_900.Velocity=True
+REINST_Skeleton_C_900.PlanarMovement=True
+REINST_Skeleton_C_900.MovementComponent=True
+REINST_Skeleton_C_900.Shape=True
+REINST_Skeleton_C_900.Navigation=True
+REINST_Skeleton_C_900.Character=True
+REINST_Skeleton_C_900.Camera=True
+REINST_Skeleton_C_900.Pawn=True
+REINST_Skeleton_C_900.Input=True
+REINST_Skeleton_C_900.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
-OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
-OpenAssetsAtExit=/Game/MyMonsters/Zombie/Zombie.Zombie
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthWidget.HealthWidget
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -947,25 +1111,26 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyWorlds/DefaultWorld
-MRUItem1=/Game/MyGame/MyPlayer/HealthWidget
-MRUItem2=/Game/MyMenu/MM_Level/MM_Level
+MRUItem0=/Game/MyMonsters/MasterMonster
+MRUItem1=/Game/MyMonsters/Skeleton
+MRUItem2=/Game/MyMonsters/Zombie/Zombie
 MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem4=/Game/MyMonsters/Zombie/Zombie
-MRUItem5=/Game/MyMonsters/MasterMonster
-MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem7=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem8=/Game/MyMonsters/MonsterHealth
-MRUItem9=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem10=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem11=/Game/MyGame/MyGameComponents/Economy/RewardComponent
-MRUItem12=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem13=/Game/MyMenu/MM_Player/MM_Player
-MRUItem14=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem15=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem16=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem17=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem18=/Game/MyGame/MyPlayer/HEALTH
+MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem5=/Game/MyMonsters/MonsterBlackboard
+MRUItem6=/Game/MyMonsters/BTDecorator_BlueprintBase_New
+MRUItem7=/Game/MyMonsters/MonsterBehavior
+MRUItem8=/Game/MyWorlds/DefaultWorld
+MRUItem9=/Game/MyGame/MyPlayer/HealthWidget
+MRUItem10=/Game/MyMenu/MM_Level/MM_Level
+MRUItem11=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem12=/Game/MyMonsters/MonsterHealth
+MRUItem13=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem14=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem15=/Game/MyGame/MyGameComponents/Economy/RewardComponent
+MRUItem16=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem17=/Game/MyMenu/MM_Player/MM_Player
+MRUItem18=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem19=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -985,6 +1150,8 @@ MRUItem18=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameComponents/Economy/RewardComponent.RewardComponent=1
 /Game/MyMonsters/Zombie/Zombie.Zombie=1
 /Game/MyGame/MyPlayer/HealthWidget.HealthWidget=1
+/Game/MyMonsters/MonsterBehavior.MonsterBehavior=1
+/Game/MyMonsters/MonsterBlackboard.MonsterBlackboard=1
 
 [RootWindow]
 ScreenPosition=X=548.000 Y=144.000
@@ -1740,6 +1907,11 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.LeftMouseAction,InputSettings.Bindings.ActionMappings.RightMouseAction,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 OnlineSubsystemConfiguratorBPLibrarySettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.LeftMouseAction,InputSettings.Bindings.ActionMappings.RightMouseAction,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WidgetComponent=WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Rendering.TextureStreaming,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+MyGameMode_C=ArrayProperty.DefaultValueCategory.None,
+MasterMonster_C=ArrayProperty.DefaultValueCategory.None,
+BoolProperty=ArrayProperty.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1759,6 +1931,8 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyMonsters/Skeleton.Skeleton;
+RecentlyPlaced=/Game/MyMonsters/Zombie/Zombie.Zombie;
 RecentlyPlaced=/Game/MyMonsters/MasterMonster.MasterMonster;
 RecentlyPlaced=/Game/MyMonsters/MonsterSpawnPoint.MonsterSpawnPoint;
 
@@ -1769,6 +1943,7 @@ IntProperty.Variable=True
 GameMapsSettings.DefaultMaps=True
 WidgetComponent.Collision=True
 K2Node_VariableGet.Variable=True
+BTTask_MoveDirectlyToward.Blackboard=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1778,19 +1953,19 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
 MyPlayer_C=
 Character=
 Pawn=
-WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 MasterMonster_C=
 REINST_MasterMonster_C_290="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -1816,5 +1991,14 @@ IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1]\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1]\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
+MyGameMode_C="\"Object.List\" \"Object.List\" "
+GameModeBase="\"Object.List\" \"Object.List\" "
+Info="\"Object.List\" \"Object.List\" "
 
 
