--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1111,10 +1111,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMonsters/MasterMonster
-MRUItem1=/Game/MyMonsters/Skeleton
-MRUItem2=/Game/MyMonsters/Zombie/Zombie
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem1=/Game/MyMonsters/MasterMonster
+MRUItem2=/Game/MyMonsters/Skeleton
+MRUItem3=/Game/MyMonsters/Zombie/Zombie
 MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem5=/Game/MyMonsters/MonsterBlackboard
 MRUItem6=/Game/MyMonsters/BTDecorator_BlueprintBase_New
@@ -1997,8 +1997,8 @@ BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
-MyGameMode_C="\"Object.List\" \"Object.List\" "
-GameModeBase="\"Object.List\" \"Object.List\" "
-Info="\"Object.List\" \"Object.List\" "
+MyGameMode_C=
+GameModeBase=
+Info=
 
 
