--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=1
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -82,8 +82,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
-MultipleInstancePositions=(X=-2020,Y=118)
-MultipleInstancePositions=(X=-1031,Y=120)
+MultipleInstancePositions=(X=315,Y=143)
+MultipleInstancePositions=(X=793,Y=159)
 MultipleInstancePositions=(X=0,Y=520)
 MultipleInstancePositions=(X=960,Y=520)
 
@@ -111,7 +111,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyWorlds/DefaultWorld
+LastLevel=/Game/MyMenu/MM_Level/MM_Level
 
 [DetailCategories]
 WorldSettings.World=True
@@ -756,10 +756,143 @@ RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 AssetManagerSettings.Asset Registry=True
+MM_MainMenuOLD_C.Layout=True
+MM_MainMenuOLD_C.Appearance=True
+MM_MainMenuOLD_C.Input=True
+MM_MainMenuOLD_C.Interaction=True
+MM_MainMenuOLD_C.Behavior=True
+MM_MainMenuOLD_C.Render Transform=True
+MM_MainMenuOLD_C.Performance=True
+MM_MainMenuOLD_C.Clipping=True
+MM_MainMenuOLD_C.Navigation=True
+MM_OptionsOLD_C.Layout=True
+MM_OptionsOLD_C.Appearance=True
+MM_OptionsOLD_C.Input=True
+MM_OptionsOLD_C.Interaction=True
+MM_OptionsOLD_C.Behavior=True
+MM_OptionsOLD_C.Render Transform=True
+MM_OptionsOLD_C.Performance=True
+MM_OptionsOLD_C.Clipping=True
+MM_OptionsOLD_C.Navigation=True
+MM_MultiplayerOLD_C.Layout=True
+MM_MultiplayerOLD_C.Appearance=True
+MM_MultiplayerOLD_C.Input=True
+MM_MultiplayerOLD_C.Interaction=True
+MM_MultiplayerOLD_C.Behavior=True
+MM_MultiplayerOLD_C.Render Transform=True
+MM_MultiplayerOLD_C.Performance=True
+MM_MultiplayerOLD_C.Clipping=True
+MM_MultiplayerOLD_C.Navigation=True
+WidgetSwitcher.Switcher=True
+WidgetSwitcher.Behavior=True
+WidgetSwitcher.Render Transform=True
+WidgetSwitcher.Performance=True
+WidgetSwitcher.Clipping=True
+WidgetSwitcher.Navigation=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+MM_Button_C.Layout=True
+MM_Button_C.Appearance=True
+MM_Button_C.Input=True
+MM_Button_C.Interaction=True
+MM_Button_C.Behavior=True
+MM_Button_C.Render Transform=True
+MM_Button_C.Performance=True
+MM_Button_C.Clipping=True
+MM_Button_C.Navigation=True
+MM_Button_C.Designer=True
+MM_WidgetSwitcher_C.Appearance=True
+MM_WidgetSwitcher_C.Designer=True
+MM_WidgetSwitcher_C.Input=True
+MM_WidgetSwitcher_C.Interaction=True
+MM_WidgetSwitcher_C.Performance=True
+MM_WidgetSwitcher_C.Layout=True
+MM_WidgetSwitcher_C.Behavior=True
+MM_WidgetSwitcher_C.Render Transform=True
+MM_WidgetSwitcher_C.Clipping=True
+MM_WidgetSwitcher_C.Navigation=True
+MM_Button_C.Default=True
+MM_ButtonOld_C.Default=True
+MM_ButtonOld_C.Button Type=True
+MM_ButtonOld_C.Button Action=True
+MM_ButtonOld_C.Appearance=True
+MM_ButtonOld_C.Designer=True
+MM_ButtonOld_C.Input=True
+MM_ButtonOld_C.Interaction=True
+MM_ButtonOld_C.Performance=True
+MM_ButtonOld_C.Layout=True
+MM_ButtonOld_C.Behavior=True
+MM_ButtonOld_C.Render Transform=True
+MM_ButtonOld_C.Clipping=True
+MM_ButtonOld_C.Navigation=True
+MM_MainMenu_C.Appearance=True
+MM_MainMenu_C.Designer=True
+MM_MainMenu_C.Input=True
+MM_MainMenu_C.Interaction=True
+MM_MainMenu_C.Performance=True
+MM_MainMenu_C.Layout=True
+MM_MainMenu_C.Behavior=True
+MM_MainMenu_C.Render Transform=True
+MM_MainMenu_C.Clipping=True
+MM_MainMenu_C.Navigation=True
+MM_Multiplayer_C.Layout=True
+MM_Multiplayer_C.Appearance=True
+MM_Multiplayer_C.Input=True
+MM_Multiplayer_C.Interaction=True
+MM_Multiplayer_C.Behavior=True
+MM_Multiplayer_C.Render Transform=True
+MM_Multiplayer_C.Performance=True
+MM_Multiplayer_C.Clipping=True
+MM_Multiplayer_C.Navigation=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Multiplayer.MM_Multiplayer
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher.MM_WidgetSwitcher
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_MainMenu.MM_MainMenu
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Settings.MM_Settings
+OpenAssetsAtExit=/Game/MyMenu/MM_Player/MM_Player.MM_Player
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -774,7 +907,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameMode
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/Extra
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -789,20 +922,26 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyWorlds/DefaultWorld
-MRUItem1=/Game/MyMenu/MM_Player/MM_Player
-MRUItem2=/Game/MyMenu/MM_Level/MM_Level
-MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem5=/Game/MyMonsters/MasterMonster
-MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem8=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem9=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem10=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem11=/Game/MyMonsters/MonsterHealth
-MRUItem12=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem13=/Game/MyGame/MyPlayer/HEALTH
+MRUItem0=/Game/MyMenu/MM_Player/MM_Player
+MRUItem1=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem2=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem3=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem4=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
+MRUItem5=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem6=/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld
+MRUItem7=/Game/MyWorlds/DefaultWorld
+MRUItem8=/Game/MyMenu/MM_Level/MM_Level
+MRUItem9=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem10=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem11=/Game/MyMonsters/MasterMonster
+MRUItem12=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem13=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem14=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem15=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem16=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem17=/Game/MyMonsters/MonsterHealth
+MRUItem18=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem19=/Game/MyGame/MyPlayer/HEALTH
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -817,6 +956,10 @@ MRUItem13=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
 /Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
 /Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState=1
+/Game/MyMenu/MM_Widget/MM_WidgetSwitcher.MM_WidgetSwitcher=1
+/Game/MyMenu/MM_Widget/MM_MainMenu.MM_MainMenu=1
+/Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button=1
+/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld.MM_ButtonOld=1
 
 [RootWindow]
 ScreenPosition=X=36.000 Y=242.000
@@ -841,7 +984,7 @@ UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyMenu/MM_Level
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
-GenericImport=G:/ProjectZombieGame/Content/
+GenericImport=C:/Users/pijel/Desktop/olney_light.otf
 GenericExport=G:/ProjectZombieGame/Content/
 GenericOpen=G:/ProjectZombieGame/Content/
 GenericSave=G:/ProjectZombieGame/Content/
@@ -1507,6 +1650,7 @@ Primitive=False
 Special Effects=False
 Uncategorized=False
 User Created=False
+Common=False
 
 [DetailCustomWidgetExpansion]
 SphereComponent=SphereComponent.Collision.Collision,
@@ -1608,12 +1752,12 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+Object=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
@@ -1646,5 +1790,9 @@ IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
+Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+ContentWidget="\"Object.Appearance.BackgroundColor\" "
+PanelWidget=
+Button="\"Object.Appearance.BackgroundColor\" "
 
 
