--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,8 +82,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
-MultipleInstancePositions=(X=-2020,Y=118)
-MultipleInstancePositions=(X=-1031,Y=120)
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=960,Y=0)
 MultipleInstancePositions=(X=0,Y=520)
 MultipleInstancePositions=(X=960,Y=520)
 
@@ -756,9 +756,77 @@ RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 AssetManagerSettings.Asset Registry=True
+BankActor_C.Tick=True
+BankActor_C.Rendering=True
+BankActor_C.Replication=True
+BankActor_C.Input=True
+BankActor_C.Actor=True
+MyGameState_C.Default=True
+BankComponent_C.Variable=True
+BankComponent_C.Sockets=True
+BankComponent_C.Default=True
+BankComponent_C.Tags=True
+BankComponent_C.ComponentReplication=True
+BankComponent_C.Activation=True
+BankComponent_C.Cooking=True
+BankComponent_C.Events=True
+BankComponent_C.ComponentTick=True
+MyGameMode_C.Default Variables=True
+WalletComponent_C.Variable=True
+WalletComponent_C.Sockets=True
+WalletComponent_C.Tags=True
+WalletComponent_C.ComponentReplication=True
+WalletComponent_C.Activation=True
+WalletComponent_C.Cooking=True
+WalletComponent_C.Events=True
+WalletComponent_C.ComponentTick=True
+WalletComponent_C.Default=True
+PlayerHUD_C.Tick=True
+PlayerHUD_C.HUD=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+SimpleHUD_C.Default=True
+SimpleHUD_C.Appearance=True
+SimpleHUD_C.Designer=True
+SimpleHUD_C.Input=True
+SimpleHUD_C.Interaction=True
+SimpleHUD_C.Performance=True
+SimpleHUD_C.Layout=True
+SimpleHUD_C.Behavior=True
+SimpleHUD_C.Render Transform=True
+SimpleHUD_C.Clipping=True
+SimpleHUD_C.Navigation=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+BankCurrency_C.Default=True
+BankCurrency_C.Appearance=True
+BankCurrency_C.Designer=True
+BankCurrency_C.Input=True
+BankCurrency_C.Interaction=True
+BankCurrency_C.Performance=True
+BankCurrency_C.Layout=True
+BankCurrency_C.Behavior=True
+BankCurrency_C.Render Transform=True
+BankCurrency_C.Clipping=True
+BankCurrency_C.Navigation=True
+BankActor_C.Default=True
+MyGameMode_C.BankSystem=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -774,7 +842,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameMode
+ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -782,27 +850,33 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.ThumbnailSizeScale=0.357143
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyWorlds/DefaultWorld
-MRUItem1=/Game/MyMenu/MM_Player/MM_Player
-MRUItem2=/Game/MyMenu/MM_Level/MM_Level
-MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem5=/Game/MyMonsters/MasterMonster
-MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem8=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem9=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem10=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem11=/Game/MyMonsters/MonsterHealth
-MRUItem12=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem13=/Game/MyGame/MyPlayer/HEALTH
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem1=/Game/MyGame/MyGameActors/BankActor
+MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem3=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem4=/Game/MyGame/MyPlayer/BankCurrency
+MRUItem5=/Game/MyGame/MyPlayer/SimpleHUD
+MRUItem6=/Game/MyGame/MyPlayer/PlayerHUD
+MRUItem7=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem8=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem9=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem10=/Game/MyWorlds/DefaultWorld
+MRUItem11=/Game/MyMenu/MM_Player/MM_Player
+MRUItem12=/Game/MyMenu/MM_Level/MM_Level
+MRUItem13=/Game/MyMonsters/MasterMonster
+MRUItem14=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem15=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem16=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem17=/Game/MyMonsters/MonsterHealth
+MRUItem18=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem19=/Game/MyGame/MyPlayer/HEALTH
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -817,11 +891,17 @@ MRUItem13=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
 /Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
 /Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState=1
+/Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent=1
+/Game/MyGame/MyGameComponents/Economy/WalletComponent.WalletComponent=1
+/Game/MyGame/MyPlayer/PlayerHUD.PlayerHUD=1
+/Game/MyGame/MyPlayer/SimpleHUD.SimpleHUD=1
+/Game/MyGame/MyGameActors/BankActor.BankActor=1
+/Game/MyGame/MyPlayer/BankCurrency.BankCurrency=1
 
 [RootWindow]
-ScreenPosition=X=36.000 Y=242.000
+ScreenPosition=X=441.000 Y=154.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -837,7 +917,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyMenu/MM_Level
+UNR=G:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
@@ -1483,10 +1563,10 @@ UATHelper.TimeStamp=2018.09.19-18.57.35
 UATHelper.LastCompileMethod=Unknown
 WorldBrowser.TimeStamp=2018.09.19-18.45.22
 WorldBrowser.LastCompileMethod=Unknown
-PerfCounters.TimeStamp=2018.09.19-18.45.15
-PerfCounters.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2018.09.19-18.45.17
-SequencerWidgets.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2018.09.19-18.57.32
+PerfCounters.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2018.09.19-18.57.33
+SequencerWidgets.LastCompileMethod=External
 
 [PluginBrowser]
 InstalledPlugins=SmoothSyncPlugin
@@ -1590,6 +1670,8 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyGame/MyGameActors/BankSpawnPoint.BankSpawnPoint;
+RecentlyPlaced=/Game/MyGame/MyGameActors/BankActor.BankActor;
 RecentlyPlaced=/Game/MyMonsters/MasterMonster.MasterMonster;
 RecentlyPlaced=/Game/MyMonsters/MonsterSpawnPoint.MonsterSpawnPoint;
 
@@ -1599,6 +1681,8 @@ EdGraph.Graph=False
 IntProperty.Variable=True
 GameMapsSettings.DefaultMaps=True
 WidgetComponent.Collision=True
+TextRenderComponent.Text=True
+WidgetComponent.UserInterface=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1608,19 +1692,19 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
 MyPlayer_C=
 Character=
 Pawn=
-WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 MasterMonster_C=
 REINST_MasterMonster_C_290="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
