--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -885,14 +885,8 @@ RotatingMovementComponent.Cooking=True
 RotatingMovementComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Multiplayer.MM_Multiplayer
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher.MM_WidgetSwitcher
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_MainMenu.MM_MainMenu
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Settings.MM_Settings
-OpenAssetsAtExit=/Game/MyMenu/MM_Player/MM_Player.MM_Player
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -907,7 +901,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/Extra
+ContentBrowserTab1.SelectedPaths=/Game,/Game/MyAssets,/Game/MyGame,/Game/MyMenu,/Game/MyMenu/MM_GameMode,/Game/MyMenu/MM_Level,/Game/MyMenu/MM_Player,/Game/MyMenu/MM_Widget,/Game/MyMonsters,/Game/MyWorlds
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -919,7 +913,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=DataValidation
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyMenu/MM_Player/MM_Player
